2010-02-18  Ingo Feinerer  <feinerer@logic.at>

	* R/complete.R (stemCompletion): New completion heuristics.

2010-02-17  Ingo Feinerer  <feinerer@logic.at>

	* R/plot.R (plot.TermDocumentMatrix): Memory improvements.

2010-02-06  Ingo Feinerer  <feinerer@logic.at>

	* DESCRIPTION (Depends): Depend on R (>= 2.10.0) to ensure that
	setOldClass(c(..., "list")) works.

2010-01-22  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (stemDocument.character): In case input is a
	simple character just delegate to the default Snowball stemmer.

2010-01-15  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readReut21578XML, readRCV1): Extract more meta
	data.

2010-01-12  Ingo Feinerer  <feinerer@logic.at>

	* R/doc.R (`Content<-`): Be careful with names attribute.

2010-01-07  Stefan Theussl  <stefan.theussl@wu.ac.at>

	* R/source.R (DirSource): Improved implementation especially when
	handling many (> 1M) files.

2009-12-22  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (getElem.URISource): Use encoding argument.

2009-12-11  Ingo Feinerer  <feinerer@logic.at>

	* R/doc.R (setOldClass): Register S3 document classes to be
	recognized by S4 methods.

2009-11-25  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (termFreq): Add option to remove punctuation
	characters.

2009-11-19  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (c.TermDocumentMatrix): Added combine method for
	merging multiple term-document matrices.

2009-11-17  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R (setOldClass): Register S3 corpus classes to be
	recognized by S4 methods.

	* man/plot.Rd: Use \dontrun{} in \examples{} section in the hope
	that CRAN Mac OS X builds do not fail any longer.

2009-11-15  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (tokenize): Use scan(..., what = "character") instead
	of RWeka:AlphabeticTokenizer() as default.

2009-11-14  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (removeWords.PlainTextDocument): Fix bug which